initial vector changes

--- a/HTML/public/index.html
+++ b/HTML/public/index.html
@@ -12,7 +12,6 @@
         <a href="#">Home</a>
         <a href="#">Account</a>
         <a href="#">Settings</a>
-        <a href="#" id="logout">Logout</a>
         <!-- Add more sidebar items here -->
     </div>
 
@@ -30,7 +29,7 @@
         </div>
         <div class="input-area">
             <div class="input-group">
-                <textarea id="chatInput" placeholder="Write your message..."></textarea> <!-- Changed to textarea -->
+                <textarea id="chatInput" placeholder="Write your message..."></textarea>
                 <button class="send-button" onclick="sendMessage()">
                     <span class="arrow-up">&#x2191;</span>
                 </button>
