--- a/HTML/public/index.html
+++ b/HTML/public/index.html
@@ -21,8 +21,7 @@
     <!-- Chat Container -->
     <div class="chat-container">
         <div class="chat-box" id="chatBox">
-            <!-- Chat content will go here -->
-            <div class="center-content">
+            <div class="center-content" id="centerContent">
                 <img src="./images/logo4.png" alt="Logo" class="logo">
                 <p class="help-text">How can I help you today?</p>
             </div>
