--- a/HTML/public/chat.html
+++ b/HTML/public/chat.html
@@ -12,7 +12,6 @@
         <a href="#">Home</a>
         <a href="#">Account</a>
         <a href="#">Settings</a>
-        <a href="#" id="logout">Logout</a>
         <!-- Add more sidebar items here -->
     </div>
 
@@ -22,15 +21,14 @@
     <!-- Chat Container -->
     <div class="chat-container">
         <div class="chat-box" id="chatBox">
-            <!-- Chat content will go here -->
-            <div class="center-content">
+            <div class="center-content" id="centerContent">
                 <img src="./images/logo4.png" alt="Logo" class="logo">
                 <p class="help-text">How can I help you today?</p>
             </div>
         </div>
         <div class="input-area">
             <div class="input-group">
-                <textarea id="chatInput" placeholder="Write your message..."></textarea> <!-- Changed to textarea -->
+                <textarea id="chatInput" placeholder="Write your message..."></textarea>
                 <button class="send-button" onclick="sendMessage()">
                     <span class="arrow-up">&#x2191;</span>
                 </button>
