--- a/HTML/public/index.html
+++ b/HTML/public/index.html
@@ -17,7 +17,7 @@
 
     <!-- Account and Add Chat Buttons -->
     <div class="buttons-container">
-        <span class="openbtn" onclick="toggleNav()">&#9776; Profile</span>
+        <span class="openbtn" onclick="toggleNav()">&#9776;</span>
     </div>
     <!-- Chat Container -->
     <div class="chat-container">
