--- a/HTML/public/index.html
+++ b/HTML/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar">
-        <button class="add-chat-btn" id="newChatButton">Add New Chat</button>
+        <button class="add-chat-btn" id="newChatButton">+ Add New Chat</button>
         <div id="chatHistory" class="chat-history">
             <!-- Chat history will be dynamically added here -->
         </div>
